--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,25 +9,40 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/logo_red"
+        android:label="نرم افزار پرداخت الکترونیک"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity" >
+        <service android:name=".service.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".service.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Splash"></activity>
+        <activity android:name=".CarSearch" />
+        <activity android:name=".Tracking" />
+        <activity android:name=".Test" />
+        <activity android:name=".SelectAvarezType"></activity>
+        <activity
+            android:name=".DrawerTest"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        </activity>
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Splash"></activity>
-        <activity android:name=".CarSearch" />
-        <activity android:name=".Tracking" />
-        <activity android:name=".Test">
-
-        </activity>
-        <activity android:name=".SelectAvarezType"></activity>
     </application>
 
 </manifest>
