--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.sputa.avarez"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.01Beta"
+        versionCode 3
+        versionName "1.05Beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/2'] } }
 }
 
 dependencies {
@@ -31,6 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.0.0-alpha1'
     implementation 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile "me.leolin:ShortcutBadger:1.1.22@aar"
 
 
 }
