--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.sputa.avarez"
         minSdkVersion 17
-        targetSdkVersion 26
-        versionCode 3
-        versionName "1.05Beta"
+        targetSdkVersion 27
+        versionCode 5
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,15 +26,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.0.0-beta1'
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.0.0-alpha1'
     implementation 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile "me.leolin:ShortcutBadger:1.1.22@aar"
-
-
+    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
 }
 apply plugin: 'com.google.gms.google-services'
 configurations.all {
