--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.sputa.avarez"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 5
-        versionName "1.0.2"
+        versionCode 14
+        versionName "1.2.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -22,7 +22,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.0.0-beta1'
@@ -32,7 +32,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.0.0-alpha1'
     implementation 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+    implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
+    implementation files('libs/ksoap2-android-assembly-2.6.0-jar-with-dependencies.jar')
 }
 apply plugin: 'com.google.gms.google-services'
 configurations.all {
