--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
     compileSdkVersion 27
     useLibrary 'org.apache.http.legacy'
 
@@ -8,13 +14,13 @@ android {
         applicationId "com.sputa.avarez"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 14
-        versionName "1.2.5"
+        versionCode 24
+        versionName "1.5.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
